# optee_eng

./: .gitmodules  CITATION.cff  CMakeLists.txt  README.md
3rd/openssl-cmake/: CMakeLists.txt  libdefs.cmake
cfg/: create_certs.sh  openssl.cnf  openssl_optee.cnf  openvpn_cli.conf  openvpn_srv.conf
cfg/certs/: 10e22dbc.0  ca.cert  ca.key  ca.srl  client.cert  client.csr  client.key  f40a0c39.0  server.cert  server.csr  server.key
optee-patches/: 0001-openvpn-2.4.9-to-2.5.0.patch  0002_build_enable_openvpn.patch
src/optee_engine/: back.c  back.h  front.c  keymgnt.c  log.c  log.h  speed.cc  utils.h
src/ta/: Makefile  delegator_tz.c  sub.mk
src/ta/include/: user_ta_header_defines.h
